# salt-master-metrics

./: .gitignore  README.md  event_listener.py  main.py  metrics.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  release.yml  test.yml
local-run/: compose.yml
local-run/build-image/: Containerfile
local-run/build-image/runit/metrics/: run
local-run/build-image/runit/salt-master/: run
local-run/build-image/runit/salt-minion/: run
salt-conf/: master  minion
src/salt_master_metrics/: __main__.py  config.py  counters.py  event_listener.py  events.py  global_logger.py  main.py  metrics.py
tests/: test_counters.py  test_events.py  test_metrics.py
