[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "salt-master-metrics"
version = "1.0.0"
authors = [
    {name="gvfnix", email="gvfnix@gmail.com"},
]
description = "Metrics exporter for salt-master events"
readme = "README.md"
requires-python = "=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gvfnix/salt-master-metrics"
